Probably fix crash when the server sends an empty message over DIMAP.

BUG: 158689

svn path=/trunk/KDE/kdepim/; revision=805568